--- a/index.html
+++ b/index.html
@@ -792,8 +792,8 @@
         const wishes_part2 = wishes_all.slice(4);
         const wishes_leave_message = [
             "留言：",
-            "可以把你今年的愿望悄悄留给我",
-            "看看能不能实现💗"
+            "请记住，无论每天过得咋样",
+            "都要记得“爱你老己”💗"
         ];
 
         let typewriterGeneration = 0;
